<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_page">

    <fragment
        android:id="@+id/nav_home_page"
        android:name="com.hit.fightness.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hit.fightness.ui.profile.ProfileFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.hit.fightness.ui.aboutus.AboutUsFragment"
        android:label="@string/aboutus"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.hit.fightness.ui.contact.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_terms"
        android:name="com.hit.fightness.ui.terms.TermsFragment"
        android:label="@string/terms"
        tools:layout="@layout/fragment_terms" />
</navigation>