<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/whit_background"
    style="@style/BottomSheetDialogTheme"
    android:layout_height="wrap_content"
    tools:context=".ImageSourceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/source" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_lite"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/post_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/camera_50"/>
            <ImageButton
                android:id="@+id/post_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/gallery_50"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/camera"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/gallery"/>
        </LinearLayout>
        <Button
            android:id="@+id/close_source"
            android:layout_width="250dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center|bottom"
            android:backgroundTint="@color/red_lite"
            android:layout_height="35dp"
            android:background="@drawable/button_bg"
            android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>