<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_frag"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_mail"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/red"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/red"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_mail"
        app:layout_constraintVertical_bias=".04"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_id"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotPassword"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/forgotPass"
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"/>

    <Button
        android:id="@+id/login_btn"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textSize="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintWidth_percent=".8"/>


</androidx.constraintlayout.widget.ConstraintLayout>