<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:minHeight="400dp"
    android:background="@drawable/corners_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTrainee"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/red"
        app:startIconDrawable="@drawable/account_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_mail"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/red"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_name"
        app:layout_constraintVertical_bias=".04"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/red"
        app:startIconDrawable="@drawable/ic_baseline_lockclose_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_mail"
        app:layout_constraintVertical_bias=".04"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_id"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/signup_password_confirm"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_marginStart="20dp"-->
<!--        app:startIconTint="@color/red"-->
<!--        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:hint="Password"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias=".5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        -->
<!--        app:layout_constraintVertical_bias=".04"-->
<!--        app:layout_constraintWidth_percent=".8"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/confirm_password_id"-->
<!--            android:inputType="textPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->
<!--        -->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_password"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/admin"
            android:textSize="19sp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/is_admin"
            android:layout_marginStart="8dp"
            app:thumbTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:background="@drawable/button_bg"
        android:text="@string/signup"
        android:textSize="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

</LinearLayout>